--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "nikic/php-parser": "^2.1",
         "react/http": "@dev",
-        "composer/composer": "^1.0"
+        "composer/composer": "dev-master",
+        "justinrainbow/json-schema": "^2.0"
     },
     "autoload": {
         "psr-4": {
