--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "nikic/php-parser": "^2.1",
         "react/http": "@dev",
         "composer/composer": "dev-master",
-        "justinrainbow/json-schema": "^2.0"
+        "justinrainbow/json-schema": "^2.0",
+        "katzgrau/klogger": "^1.2"
     },
     "autoload": {
         "psr-4": {
