--- a/scripts/grammar/parser.template
+++ b/scripts/grammar/parser.template
@@ -15,6 +15,7 @@ use PhpParser\Node\Scalar;
 use PhpParser\Node\Stmt;
 
 use PhpCmplr\Completer\Parser\ErrorNode;
+use PhpCmplr\Completer\Parser\Identifier;
 #include;
 
 /* This is an automatically GENERATED file, which should not be manually edited.
