--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "react/http": "@dev",
         "composer/composer": "dev-master",
         "justinrainbow/json-schema": "^2.0",
-        "katzgrau/klogger": "^1.2"
+        "katzgrau/klogger": "^1.2",
+        "tsufeki/react-filesystem-monitor": "dev-master"
     },
     "autoload": {
         "psr-4": {
