--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "nikic/php-parser": "dev-master",
         "justinrainbow/json-schema": "^2.0",
         "katzgrau/klogger": "^1.2",
-        "composer/composer": "^1.2"
+        "composer/composer": "^1.2",
+        "symfony/yaml": "^3.1"
     },
     "autoload": {
         "psr-4": {
